fix: name of Encrypt Action hidden by Information

--- a/personanongrata.css
+++ b/personanongrata.css
@@ -271,7 +271,7 @@ body > .card {
 }
 
 .slot > div.card:not(:first-child) {
-  margin-top: -230px !important;
+  margin-top: -230px;
 }
 
 .slot:empty {
@@ -404,7 +404,7 @@ body > .card {
   border-radius: 8px;
   padding: 8px;
   min-height: 330px;
-  min-width: 180px;
+  min-width: 250px;
 }
 
 .prs_zoneTitle {
@@ -438,12 +438,6 @@ body > .card {
   margin-top: -276px !important;
 }
 
-.prs_myStored .prs_informationCard {
-  z-index: 1;
-}
-
-.prs_myStored [data-slot-id="-1"] {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.prs_stored:not(.prs_myStored) [data-slot-id="-1"] div.card:not(:first-child) {
+  margin-top: -272px;
 }
